--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "next-tailwind-ts",
+    "name": "soboro",
     "version": "0.1.0",
     "private": true,
     "engines": {
@@ -16,17 +16,18 @@
         "prepare": "husky install"
     },
     "dependencies": {
-
         "next": "12.2.5",
         "react": "18.2.0",
         "react-dom": "18.2.0",
-        "react-icons": "^4.4.0"
+        "react-icons": "^4.4.0",
+        "uuid": "^9.0.0"
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.3",
         "@types/node": "18.7.13",
         "@types/react": "18.0.17",
         "@types/react-dom": "18.0.6",
+        "@types/uuid": "^9.0.0",
         "autoprefixer": "^10.4.8",
         "eslint": "8.23.0",
         "eslint-config-next": "12.2.5",
@@ -35,5 +36,17 @@
         "prettier": "^2.7.1",
         "tailwindcss": "^3.1.8",
         "typescript": "4.8.2"
-    }
+    },
+    "description": "Welcome to Soboro Platform",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/haneulab/soboro.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/haneulab/soboro/issues"
+    },
+    "homepage": "https://soboro.vercel.app"
 }
